add settings button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,12 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
-<!--Horizontal Dividers-->
+        <!--Horizontal Dividers-->
         <View
             android:id="@+id/divider10"
             android:layout_width="match_parent"
@@ -36,7 +38,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.2" />
-            <View
+
+        <View
             android:id="@+id/divider30"
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -46,7 +49,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.3" />
-            <View
+
+        <View
             android:id="@+id/divider40"
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -56,7 +60,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.4" />
-            <View
+
+        <View
             android:id="@+id/divider50"
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -66,7 +71,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.5" />
-            <View
+
+        <View
             android:id="@+id/divider60"
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -76,7 +82,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.6" />
-            <View
+
+        <View
             android:id="@+id/divider70"
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -86,7 +93,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.7" />
-            <View
+
+        <View
             android:id="@+id/divider80"
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -96,7 +104,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.8" />
-            <View
+
+        <View
             android:id="@+id/divider90"
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -107,17 +116,18 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.9" />
 
-<!--Vertical Dividers-->
-            <View
-                android:id="@+id/vdivider1"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <!--Vertical Dividers-->
+        <View
+            android:id="@+id/vdivider1"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <View
             android:id="@+id/vdivider2"
             android:layout_width="1dp"
@@ -128,6 +138,7 @@
             app:layout_constraintHorizontal_bias="0.2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <View
             android:id="@+id/vdivider3"
             android:layout_width="1dp"
@@ -138,7 +149,8 @@
             app:layout_constraintHorizontal_bias="0.3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-            <View
+
+        <View
             android:id="@+id/vdivider4"
             android:layout_width="1dp"
             android:layout_height="match_parent"
@@ -148,6 +160,7 @@
             app:layout_constraintHorizontal_bias="0.4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <View
             android:id="@+id/vdivider45"
             android:layout_width="1dp"
@@ -158,16 +171,18 @@
             app:layout_constraintHorizontal_bias="0.45"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-            <View
-                android:id="@+id/vdivider5"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/vdivider5"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <View
             android:id="@+id/vdivider55"
             android:layout_width="1dp"
@@ -178,16 +193,18 @@
             app:layout_constraintHorizontal_bias="0.55"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-            <View
-                android:id="@+id/vdivider6"
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="?android:attr/listDivider"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.6"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/vdivider6"
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <View
             android:id="@+id/vdivider65"
             android:layout_width="1dp"
@@ -198,7 +215,8 @@
             app:layout_constraintHorizontal_bias="0.65"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-            <View
+
+        <View
             android:id="@+id/vdivider7"
             android:layout_width="1dp"
             android:layout_height="match_parent"
@@ -208,7 +226,8 @@
             app:layout_constraintHorizontal_bias="0.7"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-            <View
+
+        <View
             android:id="@+id/vdivider8"
             android:layout_width="1dp"
             android:layout_height="match_parent"
@@ -218,7 +237,8 @@
             app:layout_constraintHorizontal_bias="0.8"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-            <View
+
+        <View
             android:id="@+id/vdivider9"
             android:layout_width="1dp"
             android:layout_height="match_parent"
@@ -229,19 +249,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-<!--AC Modes-->
+        <!--AC Modes-->
 
         <!--Accessories-->
 
         <!--Control Bars-->
         <ProgressBar
             android:id="@+id/fanProgressBar"
-            android:max="16"
             style="?android:attr/progressBarStyleHorizontal"
-            android:scaleY="8"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:max="16"
             android:rotation="-90"
+            android:scaleY="8"
             app:layout_constraintBottom_toTopOf="@+id/divider50"
             app:layout_constraintEnd_toStartOf="@+id/vdivider5"
             app:layout_constraintStart_toEndOf="@+id/vdivider4"
@@ -249,39 +269,39 @@
 
         <ProgressBar
             android:id="@+id/tempProgressBar"
-            android:max="16"
             style="?android:attr/progressBarStyleHorizontal"
-            android:scaleY="8"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:max="16"
             android:rotation="-90"
+            android:scaleY="8"
             app:layout_constraintBottom_toTopOf="@+id/divider50"
             app:layout_constraintEnd_toStartOf="@+id/vdivider6"
             app:layout_constraintStart_toEndOf="@+id/vdivider5"
             app:layout_constraintTop_toBottomOf="@+id/divider30" />
 
-<!--        AC Modes-->
+        <!--        AC Modes-->
         <ImageButton
             android:id="@+id/button_frontDemist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             app:layout_constraintBottom_toTopOf="@+id/divider20"
             app:layout_constraintEnd_toStartOf="@+id/vdivider3"
             app:layout_constraintStart_toEndOf="@+id/vdivider2"
             app:layout_constraintTop_toBottomOf="@+id/divider10"
-            app:srcCompat="@drawable/front_defrost"
-            android:background="@null"/>
+            app:srcCompat="@drawable/front_defrost" />
 
         <ImageButton
             android:id="@+id/button_rearDemist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             app:layout_constraintBottom_toTopOf="@+id/divider20"
             app:layout_constraintEnd_toStartOf="@+id/vdivider4"
             app:layout_constraintStart_toEndOf="@+id/vdivider3"
             app:layout_constraintTop_toBottomOf="@+id/divider10"
-            app:srcCompat="@drawable/rear_defrost"
-            android:background="@null" />
+            app:srcCompat="@drawable/rear_defrost" />
 
         <Button
             android:id="@+id/button_ac"
@@ -317,79 +337,80 @@
             android:id="@+id/button_cabin_cycle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             app:layout_constraintBottom_toTopOf="@+id/divider20"
             app:layout_constraintEnd_toStartOf="@+id/vdivider8"
             app:layout_constraintStart_toEndOf="@+id/vdivider7"
             app:layout_constraintTop_toBottomOf="@+id/divider10"
-            app:srcCompat="@drawable/recirculation"
-            android:background="@null" />
+            app:srcCompat="@drawable/recirculation" />
 
-<!--        Fan and Temp-->
+        <!--        Fan and Temp-->
         <ImageButton
             android:id="@+id/button_fanUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             app:layout_constraintBottom_toTopOf="@+id/divider40"
             app:layout_constraintEnd_toStartOf="@+id/vdivider4"
             app:layout_constraintStart_toEndOf="@+id/vdivider3"
             app:layout_constraintTop_toBottomOf="@+id/divider30"
-            app:srcCompat="@drawable/round_arrow_circle_up_white_48"
-            android:background="@null"/>
+            app:srcCompat="@drawable/round_arrow_circle_up_white_48" />
 
         <ImageButton
             android:id="@+id/button_fanDown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             app:layout_constraintBottom_toTopOf="@+id/divider50"
             app:layout_constraintEnd_toStartOf="@+id/vdivider4"
             app:layout_constraintStart_toEndOf="@+id/vdivider3"
             app:layout_constraintTop_toBottomOf="@+id/divider40"
-            app:srcCompat="@drawable/round_arrow_circle_down_white_48"
-            android:background="@null"/>
+            app:srcCompat="@drawable/round_arrow_circle_down_white_48" />
 
         <ImageButton
             android:id="@+id/button_tempUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             app:layout_constraintBottom_toTopOf="@+id/divider40"
             app:layout_constraintEnd_toStartOf="@+id/vdivider7"
             app:layout_constraintStart_toEndOf="@+id/vdivider6"
             app:layout_constraintTop_toBottomOf="@+id/divider30"
-            app:srcCompat="@drawable/round_arrow_circle_up_white_48"
-            android:background="@null"/>
+            app:srcCompat="@drawable/round_arrow_circle_up_white_48" />
 
         <ImageButton
             android:id="@+id/button_tempDown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             app:layout_constraintBottom_toTopOf="@+id/divider50"
             app:layout_constraintEnd_toStartOf="@+id/vdivider7"
             app:layout_constraintStart_toEndOf="@+id/vdivider6"
             app:layout_constraintTop_toBottomOf="@+id/divider40"
-            app:srcCompat="@drawable/round_arrow_circle_down_white_48"
-            android:background="@null"/>
+            app:srcCompat="@drawable/round_arrow_circle_down_white_48" />
 
-<!--        Accessories-->
+        <!--        Accessories-->
         <ImageButton
             android:id="@+id/button_domeLight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             app:layout_constraintBottom_toTopOf="@+id/divider80"
             app:layout_constraintEnd_toStartOf="@+id/vdivider4"
             app:layout_constraintStart_toEndOf="@+id/vdivider3"
             app:layout_constraintTop_toBottomOf="@+id/divider90"
-            app:srcCompat="@drawable/lightbulb_off"
-            android:background="@null"/>
+            app:srcCompat="@drawable/lightbulb_off" />
+
         <ImageButton
             android:id="@+id/button_doorLock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@null"
             app:layout_constraintBottom_toTopOf="@+id/divider90"
             app:layout_constraintEnd_toStartOf="@+id/vdivider7"
             app:layout_constraintStart_toEndOf="@+id/vdivider6"
             app:layout_constraintTop_toBottomOf="@+id/divider80"
-            app:srcCompat="@drawable/round_lock_white_48"
-            android:background="@null"/>
+            app:srcCompat="@drawable/round_lock_white_48" />
 
         <TextView
             android:id="@+id/textView_hi"
@@ -410,6 +431,16 @@
             app:layout_constraintEnd_toStartOf="@+id/vdivider65"
             app:layout_constraintStart_toEndOf="@+id/vdivider55"
             app:layout_constraintTop_toBottomOf="@+id/divider40" />
+
+        <ImageButton
+            android:id="@+id/settings_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/divider10"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/vdivider9"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/baseline_settings_20" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
