--- a/Android App/app/src/main/res/layout/fragment_root_main.xml
+++ b/Android App/app/src/main/res/layout/fragment_root_main.xml
@@ -486,6 +486,16 @@
             app:layout_constraintStart_toEndOf="@+id/vdivider45"
             app:layout_constraintTop_toBottomOf="@+id/divider70" />
 
+        <ImageButton
+            android:id="@+id/off_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_lock_power_off"
+            app:layout_constraintBottom_toTopOf="@+id/divider10"
+            app:layout_constraintEnd_toStartOf="@+id/vdivider1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
